package protobuf.srl.services.submission;

import "school.proto";
import "message.proto";
import "submission.proto";

option java_generic_services = true;

message SubmissionRequest {
    optional string authId = 1;
    repeated string submissionIds = 2;
}

message SubmissionInsert {
    optional SubmissionRequest requestData = 1;
    optional protobuf.srl.submission.SrlSubmission submission = 2;
}

message MultipleExperimentRequest {
    optional SubmissionRequest requestData = 1;
}

message ExperimentResponse {
    repeated protobuf.srl.submission.SrlExperiment experiments = 2;
}

